# stm32-tests

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
circom/: README.md  compute_root.js  generate_proof.sh  imt_preimage.circom  input.json  input_example.json  package.json  proof.json  public.json  setup.sh  setup_fast.sh  vk.json
circom/converter/: Cargo.toml
circom/converter/src/: main.rs
src/: lib.rs
src/utils/: crypto.rs  falcon.rs  groth16.rs  mod.rs  oled.rs  vk_proof.rs
tests/: Cargo.toml  README.md
tests/.cargo/: config.toml
tests/src/: main.rs
